# pr1nt

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: ci.yml
cloudflare/: kv-schema.ts  print-schema.sql  r2-cors.json  r2-lifecycle.json
docs/: ARCHITECTURE.md
dpj/: README.md  main.c
local-admin/: app.js  index.html  styles.css
local-app/: README.md  package-lock.json  package.json
local-app/src/: main.cjs  preload.cjs  renderer.css  renderer.html  renderer.js
local-server/: .env.example  Cargo.toml  README-DEPLOY.txt  start-local-server.bat
local-server/scripts/: benchmark-prepare-ws-file.mjs  benchmark-prepare-ws.mjs  test-prepare-ws.mjs
local-server/src/: auth.rs  cloudflare_kv.rs  config.rs  conversion.rs  diagnostics.rs  error.rs  handlers.rs  main.rs  model.rs  paths.rs  prepare.rs  print_sync_client.rs  printing.rs  sync.rs  text.rs  util.rs
web/: .dev.vars.example  .env.local.example  .gitignore  DEPLOY-CLOUDFLARE.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  wrangler.jsonc
web/app/: globals.css  layout.tsx  page.tsx
web/components/: FileUpload.tsx  PrintFlow.tsx  UserNameGate.tsx
web/lib/: document-types.ts  photohost-import.ts  trpc-client.ts  xhr-upload.ts
web/scripts/: test-normalpics-handoff.mjs  test-print-site-ui-upload.mjs  test-print-sync-device-migration.mjs  test-print-sync-download.mjs  test-print-sync-lease.mjs  test-r2-print-sync.mjs  watch-localserver-status.mjs
web/server/print-sync/: http.ts  schemas.ts  service.ts
web/server/trpc/: router.ts
(+15 files in other folders)
